# grade-tracker

./: .env.example  .gitignore  BACK_READ.md  FRONT_READ.md  INFRA_READ.md  README.md  TODO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  run.py  seed.py
backend/app/: __init__.py  db.py  models.py
backend/app/routes/: __init__.py  auth.py  categories.py  grades.py  students.py  teachers.py
backend/app/routes/helpers/: __init__.py  annotations.py  users.py
backend/tests/: conftest.py
backend/tests/routes/: test_grades.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  i18n.js  main.js  store.js  style.css
frontend/src/api/: request.js
frontend/src/api/routes/: auth.js  categories.js  grades.js  students.js  teachers.js
frontend/src/components/: AppDropdown.vue  AppToast.vue  AppTopBar.vue  DateInput.vue  GradeChart.vue  GradeCharts.vue  GradeForm.vue  GradeInput.vue  GradeLimitControls.vue
frontend/src/composables/generic/: useConfirm.js  useLoading.js  useToast.js
frontend/src/composables/grades/: useGrades.js  useGradesLoader.js  useLimit.js
frontend/src/directives/: clickOutside.js
frontend/src/locales/: en.js  pt-br.js
frontend/src/router/: index.js  index.test.js
frontend/src/utils/: credentialValidation.js  credentialValidation.test.js  dateUtils.js  dateUtils.test.js  gradeUtils.js  gradeUtils.test.js  translateError.js
frontend/src/views/: BaseLayout.vue  LoginView.vue  TabLayout.vue
(+20 files in other folders)
